--- a/index.html
+++ b/index.html
@@ -3,6 +3,49 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+<style>
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+}
+  body{
+    background-color: #c1c1;
+    background-image: url("Eten1.jpg");
+    background-repeat: no-repeat;
+      background-attachment: fixed;
+    background-position: center;
+    background-size: 650 800px
+}
+
+  h1{
+    color: white;
+    text-align: center;
+    font-size: 45px;
+  }
+
+  p{
+    font-family: verdana;
+    font-size: 17px;
+    color: white;
+    text-align: left;
+  }
+  h2{
+    color: white;
+    text-align: center;
+    font-size: 38px
+  }
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -22,7 +65,6 @@ body {
 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  text
 }
 
 .topnav {
@@ -50,9 +92,7 @@ body {
   }
 </style>
 </head>
-<body>
-</style>
-</head>
+
 <body>
 
 <div class="topnav">
@@ -124,50 +164,7 @@ body {
 </html>
 
 <title>Moroccanfood</title>
-<style>
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  padding: 8px;
-}
-  body{
-    background-color: #c1c1;
-    background-image: url("eten1.jpg");
-    background-repeat: no-repeat;
-      background-attachment: fixed;
-    background-position: center;
-    background-size: 650 800px
-}
-
-  h1{
-    color: white;
-    text-align: center;
-    font-size: 45px;
-  }
-
-  p{
-    font-family: verdana;
-    font-size: 17px;
-    color: #f5f5f5f5;
-    text-align: left;
-  }
-  h2{
-    color: white;
-    text-align: center;
-    font-size: 38px
-  }
-  </style>
 </head>
 </div>
 </script>
