--- a/Drinks.html
+++ b/Drinks.html
@@ -3,6 +3,48 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+}
+  body{
+    background-color: #c1c1;
+    background-image: url("eten1.jpg");
+    background-repeat: no-repeat;
+      background-attachment: fixed;
+    background-position: center;
+    background-size: 650 800px
+}
+
+  h1{
+    color: white;
+    text-align: center;
+    font-size: 37px;
+  }
+
+  p{
+    font-family: verdana;
+    font-size: 17px;
+    color: white;
+    text-align: left;
+  }
+  h2{
+    color: white;
+    text-align: center;
+    font-size: 45px
+  }
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -100,7 +142,7 @@ li a {
 }
   body{
     background-color: #c1c1;
-    background-image: url("eten1.jpg");
+    background-image: url("Eten1.jpg");
     background-repeat: no-repeat;
       background-attachment: fixed;
     background-position: center;
