--- a/vegan.html
+++ b/vegan.html
@@ -20,7 +20,7 @@ li a {
 }
   body{
     background-color: #c1c1;
-    background-image: url("ten1.jpg");
+    background-image: url("eten1.jpg");
     background-repeat: no-repeat;
       background-attachment: fixed;
     background-position: center;
