--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
 <p>I would like it if you leave a review with photos, and whether it worked out well or not. Also let me know if you liked it or not.</p>
 <p> I hope you enjoy the baking and cooking.</p>
 <P> _______________________________________________________________________________________________________________________________________________________________________________________</p>
-    <p> Every recipe on this website, and some background info.</p>
+    <p> Every recipe on this website, and some background information.</p>
 <table>
   <tr>
     <th>MOROCCAN FOOD</th>
